--- a/package.json
+++ b/package.json
@@ -135,6 +135,10 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "node-sass": "^8.0.0",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0"
   }
 }
