--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     ]
   },
   "devDependencies": {
+    "http-proxy-middleware": "^2.0.6",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "node-sass": "^8.0.0",
